--- a/client/src/styles/itempage.css
+++ b/client/src/styles/itempage.css
@@ -14,23 +14,21 @@
     flex-wrap: nowrap;
     flex: 1 0;
     
+    
 }
 
 .product-img{
     flex-shrink: 0 !important;
-    background-color: rgb(244, 244, 244);
-    height: 450px;
+    height: "fit-content";
     border-radius: 20px;
     width: 100%;
-    min-width: 450px;
-    min-height: 350px;
-    flex-shrink: 0;
+
     display: inline;
 }
 .product-info{
     flex-shrink: 0 !important;
     cursor: default;
-    height: 550px;
+    height: "fit-content";
     border-radius: 20px;
     width: 100%;
     flex-shrink: 0;
@@ -62,7 +60,7 @@
     padding-top: 20px;
     font:"Open Sans";
     line-height: 23px;
-    font-size:17px;
+    font-size:19px;
     min-width: 510px;
     max-width: 650px;
 }
@@ -240,7 +238,7 @@ max-width: 30px;
     position: relative;
     left: 388px;
     bottom: 35px;
-    z-index: 5;
+    z-index: 100;
     padding-top:10px ;
     background-color: rgb(255, 255, 255);
     border-top: 0px;
@@ -261,6 +259,7 @@ max-width: 30px;
     display:flex;
     gap:210px;
     z-index: 0;
+    margin-top: 30px;
 }
 .pannel-itms{
     font-size: 20px;
@@ -307,6 +306,8 @@ table,th,tr,td{
     width: 750px;
     
 }
+
+  
 @media screen and (max-width: 1422px){
     .prod-des{
         font-size: 15px;
@@ -337,5 +338,31 @@ table,th,tr,td{
         right:3px;
         bottom:1px;
     }
+    .pannel{
+        margin-top: 10px;
+    }
+    .quan-list{
+        left: 389px;
+    }
+    .size-list{
+        left: 247px;
+    }
 }
+
+.dropdown-content {
+    background-color: "#f5f5f5";
+    padding-left: "3px";
+    font-size: "16px";
+    font-weight: "500";
+    z-index: "100";
+    position: "relative";
+    bottom: "5px";
+    border: "2px solid rgba(0, 0, 0, 0.2)";
+    border-radius: "0px 0 5px 5px";
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s;
+  }
+  
+
     
