--- a/client/src/styles/itemcard.css
+++ b/client/src/styles/itemcard.css
@@ -1,67 +1,75 @@
-.card{
+.card {
     border: 1px solid rgba(0, 0, 0, 0.2);
     height: 303px;
     width: 230px;
     border-radius: 10px;
     margin: auto;
-  
+
 }
-.image{
+
+.image {
     margin: auto;
-    background-color:  #f5f5f5;
     width: 200px;
     height: 160px;
-    margin-top:10px;
+    margin-top: 10px;
     border-radius: 10px;
-    overflow: hidden;
+    background-color: white;
 }
-.card:hover{
+
+.card:hover {
     background-color: #f4f4f4;
 }
-.title{
+
+.title {
     font-size: 20px;
     font-weight: 600;
     margin-left: 15px;
     margin-top: 5px;
 }
-.des{
+
+.des {
     font-size: 12px;
     margin-left: 17px;
     margin-top: 2px;
     opacity: 0.7;
 }
-.btm{
+
+.btm {
     display: flex;
     justify-content: space-between;
     margin-top: 8px;
     margin-left: 16px;
     margin-right: 10px;
-   
+
 }
-.rating-number{
+
+.rating-number {
     font-size: 11px;
     position: relative;
     opacity: 0.7;
-    top:0px;
+    top: 0px;
     left: 6px;
 }
-.price{
+
+.price {
     font-size: 24px;
 }
-.add-btn{
-   
+
+.add-btn {
+
     height: 34px;
     width: 83px;
     background-color: #6A983C;
     color: #ededed;
     border: 2px solid #46760A;
     border-radius: 10px;
-    user-select:none;
+    user-select: none;
     margin-right: 6px;
 }
-.txt{
+
+.txt {
     display: inline-block;
-    margin:auto ;
+    margin: auto;
     margin-top: 4px;
     margin-left: 10px;
     font-size: 17px;
@@ -70,57 +78,66 @@
     width: 100%;
     text-decoration: none;
     color: #ededed;
-    
+
 }
-.vis{
+
+.vis {
     display: block;
 }
-.inv{
+
+.inv {
     display: none;
 }
 
-.add-btn:hover{
+.add-btn:hover {
     background-color: #46760A;
     cursor: default;
 }
-.btn-grid{
+
+.btn-grid {
     display: flex;
     justify-content: space-evenly;
-    }
-.txt3{
+}
+
+.txt3 {
     font-size: 20px;
     position: relative;
-    top:3px;
+    top: 3px;
     left: 2px;
 }
-.txt2{
-        
-        font-size: 26px;
-        position: relative;
-        bottom: 2px;
-    }
-.txt2:hover{
+
+.txt2 {
+
+    font-size: 26px;
+    position: relative;
+    bottom: 2px;
+}
+
+.txt2:hover {
     color: #cae9aa;
 
-    }
-.item-grid{
-    
+}
+
+.item-grid {
+
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    gap:28px;
+    gap: 28px;
     margin-left: 60px;
     margin-bottom: 40px;
     margin-right: -20px;
     flex-shrink: 0;
     align-items: center;
 }
-.rating{
+
+.rating {
     position: relative;
-    left:15px;
-    top:5px;
+    left: 15px;
+    top: 5px;
 }
-.grid-title{
+
+.grid-title {
     margin-left: 60px;
     font-size: 26px;
     font-weight: 600;
@@ -129,19 +146,21 @@
 
 }
 
-@media screen and (max-width: 860px){
-    .item-grid{
+@media screen and (max-width: 860px) {
+    .item-grid {
         flex-wrap: wrap;
-        
+
     }
-    .grid-title{
+
+    .grid-title {
         margin-left: 20px;
     }
 }
-@media screen and (max-width: 450px){
-    .item-grid{
+
+@media screen and (max-width: 450px) {
+    .item-grid {
         margin-left: 90px;
-        
+
     }
-    
+
 }
