--- a/client/src/styles/itempage.css
+++ b/client/src/styles/itempage.css
@@ -362,6 +362,35 @@ td {
     width: 750px;
 
 }
+.table {
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    font-size: 16px;
+    text-align: center;
+}
+
+.table th, .sizetable td {
+    padding: 10px;
+    border-bottom: 1px solid #e0e0e0;
+    text-align: center;
+}
+
+.table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+    color: #333;
+}
+
+.table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.table tbody tr:hover {
+    background-color: #e0e0e0;
+    cursor: pointer;
+}
 
 
 @media screen and (max-width: 1422px) {
