--- a/client/src/styles/itemcard.css
+++ b/client/src/styles/itemcard.css
@@ -4,6 +4,7 @@
     width: 230px;
     border-radius: 10px;
     margin: auto;
+    margin-top: 5px;
 
 }
 
@@ -120,16 +121,15 @@
 
 .item-grid {
 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 28px;
-    margin-left: 2%;
-    margin-right: 18px;
-    margin-bottom: 40px;
-    
-    flex-shrink: 0;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 233px);
+    justify-self: center;
+    align-content: center;
+    justify-content: space-evenly;
+    grid-gap: 10px;
+    margin-left: 1%;
+    margin-right: 1%;
+
 }
 
 .rating {
@@ -149,20 +149,10 @@
 }
 
 @media screen and (max-width: 860px) {
-    .item-grid {
-        flex-wrap: wrap;
-
-    }
+   
 
     .grid-title {
         margin-left: 20px;
     }
 }
 
-@media screen and (max-width: 450px) {
-    .item-grid {
-        margin-left: 90px;
-
-    }
-
-}
