--- a/client/src/styles/itempage.css
+++ b/client/src/styles/itempage.css
@@ -4,7 +4,9 @@
     display: flex;
     gap: 50px
 }
-
+textarea:focus{
+outline: none;
+}
 .img-grid {
     display: flex;
     flex-direction: column;
